--- a/src/KarveCar.NavigationInterface/KarveCar.NavigationInterface.csproj
+++ b/src/KarveCar.NavigationInterface/KarveCar.NavigationInterface.csproj
@@ -76,6 +76,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\KarveCommon\KarveCar.Common.csproj">
+      <Project>{49FEB437-7F5A-4C7B-870C-A9BB5FC809FD}</Project>
+      <Name>KarveCar.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Modules\DALModule\KarveDataServices\KarveDataServices.csproj">
       <Project>{83407587-1785-481b-a4fb-23e035173190}</Project>
       <Name>KarveDataServices</Name>
