--- a/test/KarveTest/KarveTest/packages.config
+++ b/test/KarveTest/KarveTest/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="CreditCardValidator" version="1.4.1" targetFramework="net461" />
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net461" />
   <package id="Dapper-Async" version="1.03" targetFramework="net461" />
