- Fix of the data layer booking. - Fix Code generator - Extending of KarveNavigator - Changed values - Changed Booking control view.

--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -1208,6 +1208,7 @@
     <Compile Include="MongoDB\MongoSupplierDataAccessLayer.cs" />
     <Compile Include="MongoDB\MongoVehicleDataAccessLayer.cs" />
     <Compile Include="ReservationRequestDataAccessLayer.cs" />
+    <Compile Include="SQL\ComposableStore.cs" />
     <Compile Include="SQL\IQueryStore.cs" />
     <Compile Include="LocaleDataService.cs" />
     <Compile Include="Logic\ComiDelegaConverter.cs" />
