--- a/src/Modules/DALModule/packages.config
+++ b/src/Modules/DALModule/packages.config
@@ -12,6 +12,7 @@
   <package id="MongoDB.Driver" version="2.5.0" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
+  <package id="RtfPipe" version="1.0.0.23" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="ValueInjecter" version="3.1.1.5" targetFramework="net461" />
