--- a/src/Controls/KarveControls/KarveCar.Controls.csproj
+++ b/src/Controls/KarveControls/KarveCar.Controls.csproj
@@ -586,6 +586,9 @@
     <PackageReference Include="Extended.Wpf.Toolkit">
       <Version>3.4.0</Version>
     </PackageReference>
+    <PackageReference Include="HtmlRenderer.WPF">
+      <Version>1.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
